--- a/BreakTheNexus/src/plugin.yml
+++ b/BreakTheNexus/src/plugin.yml
@@ -3,3 +3,6 @@ version: 1
 author: 99btyler
 main: breakthenexus.BreakTheNexus
 api-version: 1.8.8
+commands:
+  team:
+    description: team commands
