--- a/BreakTheNexus/src/plugin.yml
+++ b/BreakTheNexus/src/plugin.yml
@@ -4,5 +4,7 @@ author: 99btyler
 main: breakthenexus.BreakTheNexus
 api-version: 1.8.8
 commands:
+  kit:
+    description: class commands
   team:
     description: team commands
