Team now loads spawnpoint locations from config.yml

--- a/BreakTheNexus/src/config.yml
+++ b/BreakTheNexus/src/config.yml
@@ -1,4 +1,13 @@
 locations:
+  spawnpoints:
+    Red:
+      0: "-8;20;95;180;0"
+      1: "8;20;95;180;0"
+      2: "0;20;87;180;0"
+    Blue:
+      0: "8;20;-95;0;0"
+      1: "-8;20;-95;0;0"
+      2: "0;20;-87;0;0"
   nexus:
     Red: "0;10;95"
     Blue: "0;10;-95"
