--- a/BreakTheNexus/src/plugin.yml
+++ b/BreakTheNexus/src/plugin.yml
@@ -5,6 +5,6 @@ main: breakthenexus.BreakTheNexus
 api-version: 1.8.8
 commands:
   kit:
-    description: class commands
+    description: kit commands
   team:
     description: team commands
