--- a/BreakTheNexus/src/plugin.yml
+++ b/BreakTheNexus/src/plugin.yml
@@ -1,7 +1,7 @@
 name: BreakTheNexus
 version: 1
 author: 99btyler
-main: breakthenexus.BreakTheNexus
+main: com.gmail._99tylerberinger.breakthenexus.BreakTheNexus
 api-version: 1.8.8
 commands:
   kit:
