--- a/BreakTheNexus/src/config.yml
+++ b/BreakTheNexus/src/config.yml
@@ -2,16 +2,15 @@ Gamemap:
   protectedAreas:
     0: "-11,11 ; 84,99"
     1: "-11,11 ; -99,-84"
-locations:
+Red:
   spawnpoints:
-    Red:
-      0: "-8;20;95;180;0"
-      1: "8;20;95;180;0"
-      2: "0;20;87;180;0"
-    Blue:
-      0: "8;20;-95;0;0"
-      1: "-8;20;-95;0;0"
-      2: "0;20;-87;0;0"
-  nexus:
-    Red: "0;10;95"
-    Blue: "0;10;-95"
+    0: "-8,20,95,180,0"
+    1: "8,20,95,180,0"
+    2: "0,20,87,180,0"
+  nexus: "0,10,95"
+Blue:
+  spawnpoints:
+    0: "8,20,-95,0,0"
+    1: "-8,20,-95,0,0"
+    2: "-8,20,-95,0,0"
+  nexus: "0,10,-95"
