--- a/BreakTheNexus/src/plugin.yml
+++ b/BreakTheNexus/src/plugin.yml
@@ -1,6 +1,6 @@
 name: BreakTheNexus
 version: 1
-author: 99btyler
+author: Tyler Beringer
 main: com.gmail._99tylerberinger.breakthenexus.BreakTheNexus
 api-version: 1.8.8
 commands:
