Restricted kit switching to own team's protected area

--- a/BreakTheNexus/src/config.yml
+++ b/BreakTheNexus/src/config.yml
@@ -1,16 +1,14 @@
-Gamemap:
-  protectedAreas:
-    0: "-11,11 ; 84,99"
-    1: "-11,11 ; -99,-84"
 Red:
   spawnpoints:
     0: "-8,20,95,180,0"
     1: "8,20,95,180,0"
     2: "0,20,87,180,0"
   nexus: "0,10,95"
+  protectedArea: "-11,11 ; 84,99"
 Blue:
   spawnpoints:
     0: "8,20,-95,0,0"
     1: "-8,20,-95,0,0"
     2: "-8,20,-95,0,0"
   nexus: "0,10,-95"
+  protectedArea: "-11,11 ; -99,-84"
